--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -15,10 +15,8 @@ jobs:
             fail-fast: false
             matrix:
                 config:
+                    # - { os: ubuntu-latest, py: "3.6" }
                     - { os: ubuntu-latest, py: "3.7" }
-                    - { os: ubuntu-latest, py: "3.8" }
-                    - { os: ubuntu-latest, py: "3.9" }
-                    - { os: ubuntu-latest, py: "3.10" }
         steps:
             - name: Checkout Code
               uses: actions/checkout@v3
