--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ dataclasses==0.6
 imbalanced-learn==0.8.1
 imblearn==0.0
 matplotlib==2.0.0
-numpy==1.4.1
+numpy
 pandas==0.24.0
 scikit-learn==0.24.2
 scipy==1.5.4
