--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -15,7 +15,7 @@ jobs:
             fail-fast: false
             matrix:
               os: ["macOS-latest"]
-              python-version: ["3.6","3.7"]
+              python-version: ["3.6","3.7","3.8"]
         steps:
           - name: Checkout code
             uses: actions/checkout@v3
