--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -17,15 +17,10 @@ jobs:
               with:
                   auto-activate-base: true
                   python-version: "3.7"
-            - name: Install GDAL
-              run: conda install -c conda-forge gdal --yes
-            - name: Test GDAL installation
-              run: |
-                  python -c "from osgeo import gdal"
-                  gdalinfo --version
             - name: Install dependencies
               run: |
                   python -m pip install --upgrade pip
-                  pip install --no-cache-dir Cython
-                  pip install -r requirements.txt
+                  pip install --user --no-cache-dir Cython
+                  pip install --user -r requirements.txt
+                  pip install --user -r requirements_dev.txt
                   pip install .
